gitops/nitter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitter
  namespace: apps
spec:
  selector:
    app: nitter
  ports:
  - port: 80
    targetPort: 8080
