gitops/nitter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nitter
  namespace: apps
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - nitter.williampring.ca
      secretName: nitter-tls

  rules:
    - host: nitter.williampring.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nitter
                port:
                  number: 80
